# networkFoo

./: .gitignore
addresses/: 0000_vs_127001.md  addr_by_interface.sh  check_arp_entries.sh  get_host_ip_address.sh  ipv6_neighbor_discovery_protocol.md  localhost_vs_127001.md  nat_network_address_translation.md  network_addr_translation.sh  nmap_find_ip_addresses.sh  private_addresses.md  pub_ip_ifconfig.sh
communicate/: clientServer.sh  curl_put_json.sh  readme.md  simpleServer.sh  writeAndReadDatagram.sh
conn/: netstat_conns.sh
connection/: connect_with_tcp_nc.sh  connect_with_tcp_netcat.sh  connect_with_udp_netcat.sh  firewall.sh  netcat_udp_listener.sh  netstat_conns.sh  tcp_3way_handshake.md
csockets/: CMakeLists.txt  automain.py  test.sh  testRunnerGenerator.py  tinyCUnit.cmake
csockets/tests/chapter1/: createSocket.c  createSocket.py  howToVerify.sh  simpleServerClient.c
csockets/tests/chapter2/: bindLocalSocket.c  bindLockSocket.sh  calcAddrLen.sh  createSocketAddress.c
csockets/tests/chapter3/: classifyIPAddresses.c
csockets/tests/chapter4/: socketConstants.sh  socketTypes.c
csockets/tests/chapter5/: CMakeLists.txt  bindAddressToSocket.c  bindAddressToSocket.sh  getPeerSocketAddress.c  getSocketAddress.c
csockets/tests/chapter6/: CMakeLists.txt  connectionLess.sh  connectionless_sendto.c  connectionless_sendto_norun.c  datagrams.c  datagrams_norun.c  notes.txt  simpleUDPServer.c  simpleUDPServer.sh
csockets/tests/utilities/: ticc
dhcp/: README.md  configure_client.sh
dns/: README.md  concepts.sh  dns_clients.md  lookup.sh  queries.sh  reverse_loopup.sh  ubuntu_set_custom_dns_server.md
domains/: README.md  lookup.sh
gateway/: notes.md  subnet_indirect_routing.md
getstats/: get_host_ip_address.sh
hosts/: add_hostname.sh  change_hostname.sh  name_service_switch.sh  resolve_hostname.sh  set_hostname.sh
(+206 files in other folders)
